# fltk-rs

./: .clang-format  .gitignore  .gitmodules  AUTHORS  CHANGELOG.md  CHANGES2.0.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FAQ.md  LICENSE  README.md  ROADMAP.md  examples  temp  temp1.rs
.github/: dependabot.yml  pull_request_template.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  build_issue.md  config.yml
.github/workflows/: check.yml  release.yml  rust.yml
examples/: README.md  animations.rs  async_std.rs  browser.rs  buffer_deletion.rs  button.rs  c_style_callback.rs  calculator.rs  capture_window.rs  charts.rs  counter.rs  counter2.rs  custom_widget.rs  editor.rs  extra_fonts.rs  frames.rs  gallery.rs  glwindow.rs  hello.rs  hello_button.rs  image.rs  input.rs  menubar.rs  messages.rs  oldfilechooser.rs  paint.rs  pong.rs  popup.rs  rgb.rs  spreadsheet.rs  table.rs  temp_converter.rs  terminal.rs  terminal_colored.rs  threads.rs  timeout.rs  tokio.rs  tree.rs  win_handle.rs  window.rs
fltk/: Cargo.toml
fltk-derive/: Cargo.toml
fltk-derive/src/: browser.rs  button.rs  display.rs  group.rs  image.rs  input.rs  lib.rs  menu.rs  table.rs  utils.rs  valuator.rs  widget.rs  window.rs
fltk-sys/: Cargo.toml  LICENSE  README.md  bind.sh  build.rs  cmake_options.txt
fltk-sys/builder/: android.rs  bundled.rs  link.rs  mod.rs  source.rs  utils.rs
fltk-sys/cfltk/: CMakeLists.txt  cfl.cpp  cfl.h  cfl_box.cpp  cfl_box.h  cfl_browser.cpp  cfl_browser.h  cfl_button.cpp  cfl_button.h  cfl_dialog.cpp  cfl_dialog.h  cfl_draw.cpp  cfl_draw.h  cfl_enums.h  cfl_gl.cpp  cfl_gl.h  cfl_gl.hpp  cfl_group.cpp  cfl_group.h  cfl_image.cpp  cfl_image.h  cfl_input.cpp  cfl_input.h  cfl_menu.cpp  cfl_menu.h  cfl_misc.cpp  cfl_misc.h  cfl_new.cpp  cfl_new.hpp  cfl_output.cpp  cfl_output.h  cfl_table.cpp  cfl_table.h  cfl_text.cpp  cfl_text.h  cfl_tree.cpp  cfl_tree.h  cfl_valuator.cpp  cfl_valuator.h  cfl_widget.cpp  (+6 more)
fltk-sys/cfltk/include/: cfl.h  cfl_box.h  cfl_browser.h  cfl_button.h  cfl_dialog.h  cfl_draw.h  cfl_enums.h  cfl_group.h  cfl_image.h  cfl_input.h  cfl_menu.h  cfl_misc.h  cfl_new.hpp  cfl_output.h  cfl_printer.h  cfl_surface.h  cfl_table.h  cfl_text.h  cfl_tree.h  cfl_valuator.h  cfl_widget.h  cfl_window.h
fltk-sys/cfltk/src/: cfl.cpp  cfl_box.cpp  cfl_browser.cpp  cfl_button.cpp  cfl_dialog.cpp  cfl_draw.cpp  cfl_group.cpp  cfl_image.cpp  cfl_input.cpp  cfl_menu.cpp  cfl_misc.cpp  cfl_new.cpp  cfl_output.cpp  cfl_printer.cpp  cfl_surface.cpp  cfl_table.cpp  cfl_text.cpp  cfl_tree.cpp  cfl_valuator.cpp  cfl_widget.cpp  cfl_window.cpp
fltk-sys/cfltk/tests/: test1.cpp
fltk-sys/examples/: sys_simple.rs
fltk-sys/src/: bindings.rs  box.rs  browser.rs  button.rs  dialog.rs  draw.rs  fl.rs  frame.rs  glu.rs  group.rs  image.rs  input.rs  lib.rs  menu.rs  misc.rs  output.rs  prefs.rs  printer.rs  surface.rs  table.rs  term.rs  text.rs  tree.rs  utils.rs  valuator.rs  widget.rs  window.rs
fltk/examples/: README.md  aligned_output.rs  animations.rs  async_std.rs  browser.rs  c_style_callback.rs  calculator.rs  calculator2.rs  capture_window.rs  charts.rs  closable_tab.rs  closable_tabs2.rs  composite_widgets.rs  counter.rs  counter2.rs  counter3.rs  counter4.rs  custom_choice.rs  custom_dial.rs  custom_popup.rs  custom_widget.rs  custom_widgets.rs  defaults.rs  dial.rs  editor.rs  editor2.rs  extra_fonts.rs  fb.rs  fb2.rs  file_viewer.rs  fl2rust.rs  flex.rs  flmap.rs  flow.rs  format_text.rs  frames.rs  gallery.rs  glyph.rs  gradients.rs  grid.rs  (+49 more)
fltk/src/: app.rs  browser.rs  button.rs  dialog.rs  draw.rs  enums.rs  error.rs  frame.rs  group.rs  image.rs  input.rs  lib.rs  menu.rs  misc.rs  output.rs  prelude.rs  printer.rs  surface.rs  table.rs  terminal.rs  text.rs  tree.rs  utils.rs  valuator.rs  widget.rs  window.rs
fltk/src/app/: cairo.rs  channel.rs  event.rs  font.rs  init.rs  mod.rs  opts.rs  prefs.rs  rt.rs  screen.rs  state.rs  style.rs  version.rs  visual.rs  widget.rs
fltk/src/draw/: coord.rs  mod.rs  rect.rs  routines.rs  types.rs
fltk/src/examples/: animations.rs  calculator.rs  calculator2.rs  charts.rs  closable_tab.rs  composite_widgets.rs  counter.rs  counter2.rs  counter3.rs  counter4.rs  custom_choice.rs  custom_dial.rs  custom_popup.rs  custom_widgets.rs  defaults.rs  editor.rs  editor2.rs  fb.rs  flex.rs  format_text.rs  frames.rs  gradients.rs  grid.rs  hello.rs  hello_button.rs  hello_flex.rs  hello_svg.rs  image.rs  menubutton.rs  messages.rs  mod.rs  paint.rs  pong.rs  popup_browser.rs  prefs.rs  rgb.rs  rounded_images.rs  screens_info.rs  shapedwindow.rs  shapedwindow_taskbar.rs  (+13 more)
fltk/src/macros/: browser.rs  button.rs  display.rs  group.rs  image.rs  input.rs  menu.rs  mod.rs  table.rs  utils.rs  valuator.rs  widget.rs  window.rs
fltk/src/utils/: mod.rs  oncelock.rs
fltk/tests/: app_handle.rs  clear.rs  cmenu.rs  gl.rs  global_state.rs  idle.rs  image.rs  messages.rs  modify_submenu.rs  threads.rs  timeouts.rs
src/: align.rs  app.rs  browser.rs  button.rs  color.rs  dialog.rs  draw.rs  enums.rs  fl.rs  font.rs  frame.rs  gl.rs  group.rs  image.rs  input.rs  lib.rs  menu.rs  misc.rs  output.rs  prelude.rs  table.rs  text.rs  tree.rs  valuator.rs  widget.rs  window.rs
