[package]
name = "fltk"
version = "0.4.1"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
edition = "2018"
description = "Rust bindings for the FLTK GUI library"
repository = "https://github.com/MoAlyousef/fltk-rs"
documentation = "https://docs.rs/fltk"
keywords = ["gui", "bindings", "graphics"]
readme = "README.md"
license = "MIT"

[lib]
name = "fltk"
path = "src/lib.rs"

[dependencies]
fltk-sys = { path = "fltk-sys", version = "^0.4.1" }
fltk-derive = { path = "fltk-derive", version = "^0.4.1" }

[features]
default = []
fltk-shared = ["fltk-sys/fltk-shared"] # builds a shared lib of fltk
use-ninja = ["fltk-sys/use-ninja"] # if you have ninja build installed, it builds faster than make or VS
system-fltk = ["fltk-sys/system-fltk"] # if you would like to use the installed fltk library
cpp-testing = ["fltk-sys/cpp-testing"] # for internal C++ testing

[[example]]
name = "hello"

[[example]]
name = "hello_button"

[[example]]
name = "counter"

[[example]]
name = "calculator"

[[example]]
name = "editor"

[[example]]
name = "gallery"

[[example]]
name = "terminal"

[[example]]
name = "paint"

[[example]]
name = "threads"

[[example]]
name = "messages"