[package]
name = "fltk"
version = "0.4.8"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
edition = "2018"
description = "Rust bindings for the FLTK GUI library"
repository = "https://github.com/MoAlyousef/fltk-rs"
documentation = "https://docs.rs/fltk"
keywords = ["gui", "bindings", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"
exclude = ["/screenshots", "/.github"]

[lib]
name = "fltk"
path = "src/lib.rs"

[workspace]
members = [
    ".",
    "fltk-sys",
    "fltk-derive",
]

[dependencies]
fltk-sys = { path = "fltk-sys", version = "^0.4.8" }
fltk-derive = { path = "fltk-derive", version = "^0.4.8" }

[features]
default = []
fltk-shared = ["fltk-sys/fltk-shared"] # Builds a shared lib of fltk
use-ninja = ["fltk-sys/use-ninja"] # If you have ninja build installed, it builds faster than make or VS
system-fltk = ["fltk-sys/system-fltk"] # If you would like to use the installed fltk library, should be FLTK 1.4
system-libpng = ["fltk-sys/system-libpng"] # Uses the system libpng
system-libjpeg = ["fltk-sys/system-libjpeg"] # Uses the system libjpeg
system-zlib = ["fltk-sys/system-zlib"] # Uses the system zlib
legacy-opengl = ["fltk-sys/legacy-opengl"] # Support of Lagacy OpenGL
gl-window = ["fltk-sys/gl-window"] # Support for GlWindow
cpp-testing = ["fltk-sys/cpp-testing"] # For internal C++ testing

[[example]]
name = "hello"

[[example]]
name = "hello_button"

[[example]]
name = "counter"

[[example]]
name = "calculator"

[[example]]
name = "editor"

[[example]]
name = "gallery"

[[example]]
name = "terminal"

[[example]]
name = "paint"

[[example]]
name = "threads"

[[example]]
name = "messages"