[package]
name = "fltk-derive"
version = "0.2.20"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
edition = "2018"
description = "Rust bindings for the FLTK GUI library"
repository = "https://github.com/MoAlyousef/fltk-rs"
keywords = ["gui", "bindings", "graphics"]
license = "MIT"

[lib]
name = "fltk_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = "^1.0.17"
quote = "^1.0.3"
