[package]
name = "fltk-derive"
version = "0.12.8"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
edition = "2018"
description = "Rust bindings for the FLTK GUI library"
repository = "https://github.com/MoAlyousef/fltk-rs"
keywords = ["gui", "bindings", "graphics"]
license = "MIT"

[lib]
name = "fltk_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = "^1.0.57"
quote = "^1.0.8"
