[package]
name = "fltk-derive"
version = "1.0.12"
authors = ["MoAlyousef <mohammed.alyousef@neurosrg.com>"]
edition = "2018"
description = "Rust bindings for the FLTK GUI library"
repository = "https://github.com/fltk-rs/fltk-rs"
keywords = ["gui", "bindings", "graphics"]
license = "MIT"

[lib]
name = "fltk_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = "^1.0.72"
quote = "^1.0.9"
