[package]
name = "fltk-sys"
version = "1.3.25"
authors = ["The fltk-rs Authors"]
build = "build/main.rs"
edition = "2018"
description = "Rust bindings for the FLTK GUI library"
repository = "https://github.com/fltk-rs/fltk-rs"
keywords = ["gui", "bindings", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"
links = "fltk"

[lib]
name = "fltk_sys"
path = "src/lib.rs"

[build-dependencies]
cmake = "0.1"

[features]
default = []
fltk-shared = []
use-ninja = []
system-fltk = []
system-libpng = []
system-libjpeg = []
system-zlib = []
legacy-opengl = []
fltk-bundled = []
enable-glwindow = []
no-images = []
no-pango = []
no-gdiplus = []
single-threaded = []
use-wayland = []
