[package]
name = "fltk-sys"
version = "1.4.19"
authors = ["The fltk-rs Authors"]
build = "build/main.rs"
edition = "2021"
rust-version = "1.56"
description = "Rust bindings for the FLTK GUI library"
repository = "https://github.com/fltk-rs/fltk-rs"
keywords = ["gui", "bindings", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"
links = "cfltk"

[lib]
name = "fltk_sys"
path = "src/lib.rs"

[build-dependencies]
cc = { version = "1", features = ["parallel"], optional = true }
cmake = "0.1"

[features]
default = []
fltk-shared = []
use-ninja = []
system-fltk = []
system-libpng = []
system-libjpeg = []
system-zlib = []
legacy-opengl = []
fltk-bundled = []
enable-glwindow = []
no-images = []
no-pango = []
no-gdiplus = []
single-threaded = []
use-wayland = []
static-msvcrt = []
cairoext = []
fltk-config = ["cc"]
pkg-config = []

[package.metadata.docs.rs]
features = ["enable-glwindow"]
rustdoc-args = ["--cfg", "docsrs"]
