[package]
name = "fltk2-sys"
version = "0.1.5"
authors = ["The fltk-rs Authors"]
build = "build/main.rs"
edition = "2024"
rust-version = "1.85"
description = "Rust bindings for the FLTK GUI library"
repository = "https://github.com/fltk-rs/fltk-rs"
keywords = ["gui", "bindings", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"
links = "cfltk2"

[lib]
name = "fltk_sys"
path = "src/lib.rs"

[build-dependencies]
cc = { version = "1", features = ["parallel"], optional = true }

[target.'cfg(not(any(target_os = "emscripten", target_os = "android")))'.build-dependencies]
cmake = { version = "0.1.51" }

[target.'cfg(any(target_os = "emscripten", target_os = "android"))'.build-dependencies]
cmake = { package = "cmk" , version = "0.1.2" }

[features]
default = []
fltk-shared = []
use-ninja = []
system-fltk = []
system-libpng = []
system-libjpeg = []
system-zlib = []
legacy-opengl = []
cfltk-bundled = []
enable-glwindow = []
use-images = []
no-pango-cairo = []
no-gdiplus = []
single-threaded = []
no-wayland = []
wayland-only = []
static-msvcrt = []
cairoext = []
fltk-config = ["cc"]
pkg-config = []
gtk-decor = []

[package.metadata.docs.rs]
features = ["enable-glwindow"]
rustdoc-args = ["--cfg", "docsrs"]
