[package]
name = "fltk"
version = "1.3.20"
authors = ["The fltk-rs Authors"]
edition = "2018"
description = "Rust bindings for the FLTK GUI library"
repository = "https://github.com/fltk-rs/fltk-rs"
documentation = "https://docs.rs/fltk"
keywords = ["gui", "ui", "widgets", "bindings", "graphics"]
categories = ["gui"]
readme = "README.md"
license = "MIT"
exclude = ["/.github", "./examples"]

[lib]
name = "fltk"
path = "src/lib.rs"

[dependencies]
fltk-sys = { path = "../fltk-sys", version = "=1.3.20" }
bitflags = "^1.3"
paste = "1"
crossbeam-channel = "0.5"
ttf-parser = "0.17"
# Enables getting a raw window handle on supported platforms, fixed at version 0.4 for fltk 1.* compat
raw-window-handle = { version = "^0.4", optional = true }
# Enables getting a raw window handle on supported platforms, tracks the current raw-window-handle version. 
rwh05 = { package = "raw-window-handle", version = "0.5", optional = true }

[features]
default = []
fltk-bundled = ["fltk-sys/fltk-bundled"] # Support for bundled versions of cfltk and fltk (requires curl and tar)
enable-glwindow = ["fltk-sys/enable-glwindow"] # Support for systems without OpenGL
no-pango = ["fltk-sys/no-pango"] # You can use this if you don't need rtl or cjk unicode support
fltk-shared = ["fltk-sys/fltk-shared"] # Builds a shared lib of fltk
use-ninja = ["fltk-sys/use-ninja"] # If you have ninja build installed or it's available, it builds faster than make or VS
system-fltk = ["fltk-sys/system-fltk"] # If you would like to use the installed fltk library, should be FLTK 1.4
system-libpng = ["fltk-sys/system-libpng"] # Uses the system libpng
system-libjpeg = ["fltk-sys/system-libjpeg"] # Uses the system libjpeg
system-zlib = ["fltk-sys/system-zlib"] # Uses the system zlib
no-gdiplus = ["fltk-sys/no-gdiplus"] # Disable gdiplus drawing
no-images = ["fltk-sys/no-images"] # (Experimental) You can use this feature if your app doesn't use images to reduce binary size
legacy-opengl = ["fltk-sys/legacy-opengl"] # (Experimental) Support of Lagacy OpenGL
single-threaded = ["fltk-sys/single-threaded"] # (Experimental) Disable multithreading support when linking X11 libs non-mt x11 libs.
use-wayland = ["fltk-sys/use-wayland"] # Use FLTK's wayland backend on linux systems.

[package.metadata.docs.rs]
features = ["enable-glwindow"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=examples"]

[[test]]
name = "app_handle"
path = "tests/app_handle.rs"
harness = false

[[test]]
name = "idle"
path = "tests/idle.rs"
harness = false

[[test]]
name = "messages"
path = "tests/messages.rs"
harness = false

[[test]]
name = "threads"
path = "tests/threads.rs"
harness = false

[[test]]
name = "modify_submenu"
path = "tests/modify_submenu.rs"
harness = false

[[test]]
name = "global_state"
path = "tests/global_state.rs"
harness = false
